--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -29,13 +29,16 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
+				<li class="nav-item active"><a class="nav-link" href="#landing">Home
 					</a></li>
-				<li class="nav-item active"><a class="nav-link" href="#">Locations
+				<li class="nav-item active"><a class="nav-link" href="#media">Album
 					</a></li>
-				<li class="nav-item active"><a class="nav-link" href="#">Pricing
+				<li class="nav-item active"><a class="nav-link" href="#testimonials">Reviews
 					</a></li>
-				<li class="nav-item active"><a class="nav-link" href="#contacts">About </a></li>
+				<li class="nav-item active"><a class="nav-link" href="#about-us">About us
+					</a></li>
+				<li class="nav-item active"><a class="nav-link" href="#contact-us">Contacts
+					</a></li>
 				<li class="nav-item active"><a class="nav-link" href="#">Login</a>
 				</li>
 			</ul>
@@ -44,12 +47,12 @@
 		</div>
 
 	</nav>
-	<section class="landing">
+	<section class="landing" id="landing">
 		<h2 class="big-text mt-3 font-weight-bold">Gift yourself an
 			experience</h2>
 	</section>
 
-	<section class="pool">
+	<section class="pool" id="pool">
 		<div class="row">
 			<div class="col-md-4 pool-text-col" data-aos="fade-right" id="pool-text">
 				<h2 class="pool-heading">Soak in the sunlight</h2>
@@ -71,7 +74,7 @@
 		</div>
 	</section>
 
-	<section class="restaurant">
+	<section class="restaurant" id="restaurant">
 		<div class="row">
 			<div class="col-md-8 mt-5 restaurant-image-col" data-aos="fade-right" id="restaurant-image-col">
 				<img class="restaurant-image" src="../images/hotel_restoraunt.jpg" alt="restaurant">
@@ -93,7 +96,7 @@
 		</div>
 	</section>
 
-	<section class="media">
+	<section class="media" id="media">
 		<div class="row" data-aos="slide-up">
 			<h2 class="media-heading">Take a peek inside</h2>
 		</div>
@@ -116,10 +119,9 @@
 						alt="fancy hotel picture races onwards"></div>
 			</div>
 		</div>
-		<div class="row mt-3"></div>
 	</section>
 
-	<section class="testimonials">
+	<section class="testimonials" id="testimonials">
 		<div class="row" data-aos="slide-up">
 			<h2 class="testimonials-heading">And see what others have to say</h2>
 		</div>
@@ -133,8 +135,8 @@
 						<div class="card testimonials-card">
 							<div class="layer"></div>
 							<div class="content">
-								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
-									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								<p>"Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh."
 								</p>
 								<div class="imgBox">
 									<img class="testimonials-image" src="../images/guy1.jpg" alt="Guy 1">
@@ -149,11 +151,11 @@
 						<div class="card testimonials-card">
 							<div class="layer"></div>
 							<div class="content">
-								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
-									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								<p>"Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh."
 								</p>
 								<div class="imgBox">
-									<img class="testimonials-image" src="../images/lady1.jpg" alt="Lady 1">
+									<img class="testimonials-image" src="../images/guy4.jpg" alt="Guy 4">
 								</div>
 								<div class="details">
 									<h2>Someone Famous<br><span>Influencer</span></h2>
@@ -165,11 +167,11 @@
 						<div class="card testimonials-card">
 							<div class="layer"></div>
 							<div class="content">
-								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
-									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								<p>"Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh."
 								</p>
 								<div class="imgBox">
-									<img class="testimonials-image" src="../images/guy4.jpg" alt="Guy 4">
+									<img class="testimonials-image" src="../images/lady1.jpg" alt="Lady 1">
 								</div>
 								<div class="details">
 									<h2>Someone Famous<br><span>Model</span></h2>
@@ -181,24 +183,8 @@
 						<div class="card testimonials-card">
 							<div class="layer"></div>
 							<div class="content">
-								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
-									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
-								</p>
-								<div class="imgBox">
-									<img class="testimonials-image" src="../images/lady4.jpg" alt="Lady 4">
-								</div>
-								<div class="details">
-									<h2>Someone Famous<br><span>Movie Star</span></h2>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="swiper-slide testimonials-slide">
-						<div class="card testimonials-card">
-							<div class="layer"></div>
-							<div class="content">
-								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
-									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								<p>"Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh."
 								</p>
 								<div class="imgBox">
 									<img class="testimonials-image" src="../images/guy3.jpg" alt="Guy 3">
@@ -213,8 +199,8 @@
 						<div class="card testimonials-card">
 							<div class="layer"></div>
 							<div class="content">
-								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
-									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								<p>"Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh."
 								</p>
 								<div class="imgBox">
 									<img class="testimonials-image" src="../images/lady3.jpg" alt="Lady 3">
@@ -229,8 +215,8 @@
 						<div class="card testimonials-card">
 							<div class="layer"></div>
 							<div class="content">
-								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
-									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								<p>"Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh."
 								</p>
 								<div class="imgBox">
 									<img class="testimonials-image" src="../images/guy2.jpg" alt="Guy 2">
@@ -241,29 +227,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="swiper-slide testimonials-slide">
-						<div class="card testimonials-card">
-							<div class="layer"></div>
-							<div class="content">
-								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
-									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
-								</p>
-								<div class="imgBox">
-									<img class="testimonials-image" src="../images/lady2.jpg" alt="Lady 2">
-								</div>
-								<div class="details">
-									<h2>Someone Famous<br><span>Model</span></h2>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
 		<div class="row mt-3"></div>
 	</section>
 
-	<section class="about">
+	<section class="about" id="about-us">
 		<div class="row" data-aos="slide-up">
 			<h2 class="about-heading">Our values</h2>
 		</div>
@@ -277,9 +247,10 @@
 					<div class="flip-card-front">
 						<img class="logo-image" src="../images/logo_again.PNG" alt="logo">
 						<blockquote class="blockquote text-center">
-							<p class="mb-0 mt-3">We are what we repeatedly do. Excellence, then, is not an act, but a habit.</p>
+							<p class="mb-0 mt-3">We are what we repeatedly do. Excellence, then, is not an act, but a
+								habit.</p>
 							<footer class="blockquote-footer">Aristotle</footer>
-						  </blockquote>
+						</blockquote>
 					</div>
 					<div class="flip-card-back">
 						<h3 class="card-heading">Excellence</h3>
@@ -300,13 +271,15 @@
 						<blockquote class="blockquote text-center">
 							<p class="mb-0 mt-3">Waste no more time arguing about what a good man should be. Be one.</p>
 							<footer class="blockquote-footer">Marcus Aurelius</footer>
-						  </blockquote>
+						</blockquote>
 					</div>
 					<div class="flip-card-back">
 						<h3 class="card-heading">Integrity</h3>
-						<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+						<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla
+							orci
 							diam eget purus. Maecenas ultricies semper lorem id
-							gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
+							gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet,
+							nisl
 							quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
 							diam eget purus. Maecenas ultricies semper lorem id
 							gravida.
@@ -320,15 +293,18 @@
 					<div class="flip-card-front">
 						<img class="logo-image" src="../images/logo_again.PNG" alt="logo">
 						<blockquote class="blockquote text-center">
-							<p class="mb-0 mt-3">The secret of change is to focus all of your energy, not on fighting the old, but building on the new.</p>
+							<p class="mb-0 mt-3">The secret of change is to focus all of your energy, not on fighting
+								the old, but building on the new.</p>
 							<footer class="blockquote-footer">Socrates</footer>
-						  </blockquote>
+						</blockquote>
 					</div>
 					<div class="flip-card-back">
 						<h3 class="card-heading">Innovation</h3>
-						<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+						<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla
+							orci
 							diam eget purus. Maecenas ultricies semper lorem id
-							gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
+							gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet,
+							nisl
 							quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
 							diam eget purus. Maecenas ultricies semper lorem id
 							gravida.
@@ -339,7 +315,7 @@
 		</div>
 	</section>
 
-	<section class="contacts" id="contacts">
+	<section class="contacts" id="contact-us">
 		<div class="row mt-3">
 			<div class="col-md-4 contacts-col" data-aos="fade-right" id="contacts-col">
 				<h3 class="contacts-title mb-3">Get in touch</h3>
