--- a/src/main/resources/static/css/views/index.css
+++ b/src/main/resources/static/css/views/index.css
@@ -120,18 +120,21 @@
     background-color: #1a1a1a;
     background-size: cover;
     padding: 0rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
   }
 
   .media-heading{
     color: white;
-    transform: translate(189%, 208%);
+    transform: translate(0, 123%);
   }
 
   .swiper-container {
     width: 100%;
     padding-top: 5rem;
-    padding-bottom: 8rem;
+    padding-bottom: 9rem;
   }
 
   .swiper-slide {
@@ -154,7 +157,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0rem;
     margin: 0;
   }
 
@@ -165,6 +167,7 @@
 
   .testimonials-div{
     position: relative;
+    padding-bottom: 2rem;
     max-width: 100%;
   }
 
@@ -198,7 +201,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#03a9f4, #e91ee3);
+    background: linear-gradient(#e9e9e8, #acacac);
     z-index: 1;
   }
 
@@ -216,6 +219,7 @@
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 20px;
+    font-style: italic;
     color: white;
   }
 
@@ -225,7 +229,6 @@
     margin: 0 auto 10px;
     border-radius: 50%;
     overflow: hidden;
-    border-radius: 4px solid #1a1a1a;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   }
 
@@ -245,8 +248,16 @@
     transition: 0.5s;
   }
 
+  .testimonials-card:hover .content p{
+    color: black;
+  }
+
+  .testimonials-card:hover .content h2{
+    color: black;
+  }
+
   .testimonials-card:hover .content h2 span{
-    color: white;
+    color: black;
   }
 
   .about{
