Upgrading landing page

--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -50,6 +50,28 @@
 	<section class="landing" id="landing">
 		<h2 class="big-text mt-3 font-weight-bold">Gift yourself an
 			experience</h2>
+		<div class="focus-images-box">
+			<div class="row focus-images-row">
+				<div class="focus-image-background" id="focus-image-one">
+					<img class="focus-image" src="../images/focus_image1.jpg" alt="focus image">
+				</div>
+				<div class="focus-image-background" id="focus-image-two">
+					<img class="focus-image" src="../images/focus_image4.jpg" alt="focus image">
+				</div>
+				<div class="focus-image-background" id="focus-image-three">
+					<img class="focus-image" src="../images/focus_image3.jpg" alt="focus-image">
+				</div>
+				<div class="focus-image-background" id="focus-image-four">
+					<img class="focus-image" src="../images/focus_image5.jpg" alt="focus-image">
+				</div>
+			</div>
+			<div class="row focus-titles-row">
+				<h1 class="focus-title" id="focus-title-one">Rooms</h1>
+				<h1 class="focus-title" id="focus-title-two">Locations</h1>
+				<h1 class="focus-title" id="focus-title-three">Event halls</h1>
+				<h1 class="focus-title" id="focus-title-four">Entertainment</h1>
+			</div>
+		</div>
 	</section>
 
 	<section class="pool" id="pool">
