--- a/src/main/resources/static/css/views/index.css
+++ b/src/main/resources/static/css/views/index.css
@@ -68,6 +68,45 @@
     justify-content: center;
     align-items: center;
   }
+
+  .focus-images-box{
+    position: absolute;
+    top: 58%;
+    left: 21%;
+  }
+
+  .focus-image-background{
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    width: 181px;
+    height: 181px;
+    transition: 0.5s;
+    background: linear-gradient(#e9e9e8, #acacac);
+    margin-right: 2rem;
+  }
+
+  .focus-image-background:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+
+  .focus-image{
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    transform: scale(0.9);
+    width: 181px;
+    height: 181px;
+  }
+
+  .focus-title{
+    color: white;
+    opacity: 0;
+    border-bottom: 4px solid white;
+    transition: 0.5s;
+    display: inline-block;
+    position: absolute;
+    top: 127%;
+    left: 38%;
+    -webkit-text-stroke: 0.5px #1a1a1a;
+  }
   
   .pool{
   	background: #1a1a1a;
