--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -379,16 +379,34 @@
 				</div>
 			</div>
 		</div>
-		<div class="row social-media-row d-flex justify-content-center" data-aos="slide-up">
+		<div class="row social-media-row">
 			<p>You can also find us on</p>
-			<br>
 		</div>
-		<div class="row social-icons-row mb-2 d-flex justify-content-center" data-aos="slide-up">
+		<div class="row social-icons-row"></div>
 			<img class="social-media-image mr-3" src="../images/facebook-square.svg" alt="facebook" id="facebook-image">
 			<img class="social-media-image mr-3" src="../images/twitter-square.svg" alt="twitter" id="twitter-image">
 			<img class="social-media-image mr-3" src="../images/instagram-square.svg" alt="instagram"
 				id="instagram-image"> <img class="social-media-image mr-3" src="../images/linkedin-square.svg"
 				alt="linked in" id="linkedin-image">
+		</div>
+	</section>
+
+	<section class="footer">
+		<div class="row policies-row"></div>
+			<p class="policy-link" href="">Environmental policy</p>
+			<p class="policy-link" href="">Privacy policy</p>
+			<p class="policy-link" href="">Business partners</p>
+			<p class="policy-link" href="">Terms of service</p>
+		</div>
+		<div class="row brand-row">
+			<img class="logo-footer" src="../images/logo_again.PNG" alt="logo">
+			<p class="brand-title">Venator</p>
+		</div>
+		<div class="row z-row">
+			<p class="z-text">Images by Pexels and Unsplash</p>
+		</div>
+		<div class="row z-row">
+			<p class="z-text">© Design by Georgi Uchkunov</p>
 		</div>
 	</section>
 
