--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -21,7 +21,7 @@
 
 
 
-		<a class="navbar-brand" href="#">Venator</a>
+		<a class="navbar-brand" href="#"><img class="logo-navbar" src="../images/logo_again.PNG" alt="logo">Venator</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
 			aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -382,7 +382,7 @@
 		<div class="row social-media-row">
 			<p>You can also find us on</p>
 		</div>
-		<div class="row social-icons-row"></div>
+		<div class="row social-icons-row">
 			<img class="social-media-image mr-3" src="../images/facebook-square.svg" alt="facebook" id="facebook-image">
 			<img class="social-media-image mr-3" src="../images/twitter-square.svg" alt="twitter" id="twitter-image">
 			<img class="social-media-image mr-3" src="../images/instagram-square.svg" alt="instagram"
@@ -392,11 +392,51 @@
 	</section>
 
 	<section class="footer">
-		<div class="row policies-row"></div>
-			<p class="policy-link" href="">Environmental policy</p>
-			<p class="policy-link" href="">Privacy policy</p>
-			<p class="policy-link" href="">Business partners</p>
-			<p class="policy-link" href="">Terms of service</p>
+		<div class="row policies-row">
+			<div class="col policies-col">
+				<div class="row">
+					<a class="policy-link" href="">Environmental policy</a>
+				</div>
+				<div class="row">
+					<p>Suspendisse rhoncus maximus lectus at pretium. Nullam id egestas dui. Pellentesque mollis euismod
+						sollicitudin. Cras quis purus consequat, dictum tortor non, feugiat urna. Nam vulputate mauris
+						sed condimentum euismod. Integer neque enim, aliquet vitae sagittis et, pretium ut urna. Aliquam
+						ultricies sem non leo scelerisque, vel fringilla ex dignissim.</p>
+				</div>
+			</div>
+			<div class="col policies-col">
+				<div class="row">
+					<a class="policy-link" href="">Privacy policy</a>
+				</div>
+				<div class="row">
+					<p>Suspendisse rhoncus maximus lectus at pretium. Nullam id egestas dui. Pellentesque mollis euismod
+						sollicitudin. Cras quis purus consequat, dictum tortor non, feugiat urna. Nam vulputate mauris
+						sed condimentum euismod. Integer neque enim, aliquet vitae sagittis et, pretium ut urna. Aliquam
+						ultricies sem non leo scelerisque, vel fringilla ex dignissim.</p>
+				</div>
+			</div>
+			<div class="col policies-col">
+				<div class="row">
+					<a class="policy-link" href="">Business partners</a>
+				</div>
+				<div class="row">
+					<p>Suspendisse rhoncus maximus lectus at pretium. Nullam id egestas dui. Pellentesque mollis euismod
+						sollicitudin. Cras quis purus consequat, dictum tortor non, feugiat urna. Nam vulputate mauris
+						sed condimentum euismod. Integer neque enim, aliquet vitae sagittis et, pretium ut urna. Aliquam
+						ultricies sem non leo scelerisque, vel fringilla ex dignissim.</p>
+				</div>
+			</div>
+			<div class="col policies-col">
+				<div class="row">
+					<a class="policy-link" href="">Terms of service</a>
+				</div>
+				<div class="row">
+					<p>Suspendisse rhoncus maximus lectus at pretium. Nullam id egestas dui. Pellentesque mollis euismod
+						sollicitudin. Cras quis purus consequat, dictum tortor non, feugiat urna. Nam vulputate mauris
+						sed condimentum euismod. Integer neque enim, aliquet vitae sagittis et, pretium ut urna. Aliquam
+						ultricies sem non leo scelerisque, vel fringilla ex dignissim.</p>
+				</div>
+			</div>
 		</div>
 		<div class="row brand-row">
 			<img class="logo-footer" src="../images/logo_again.PNG" alt="logo">
@@ -405,8 +445,8 @@
 		<div class="row z-row">
 			<p class="z-text">Images by Pexels and Unsplash</p>
 		</div>
-		<div class="row z-row">
-			<p class="z-text">© Design by Georgi Uchkunov</p>
+		<div class="row z1-row">
+			<p class="z1-text">© Design by Georgi Uchkunov</p>
 		</div>
 	</section>
 
