--- a/src/main/resources/static/css/views/index.css
+++ b/src/main/resources/static/css/views/index.css
@@ -25,7 +25,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 71px;
+    height: 73px;
   }
 
   .logo-navbar{
@@ -55,7 +55,17 @@
     left: 50%;
     color: white;
     -webkit-text-stroke: 2px #1a1a1a;
-    transform: translate(-50%, -30%);
+    transform: translate(-53%, -30%);
+    font-size: 5rem;
+  }
+
+  .big-text-two {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    color: white;
+    -webkit-text-stroke: 2px #1a1a1a;
+    transform: translate(-53%, -30%);
     font-size: 5rem;
   }
 
@@ -78,7 +88,7 @@
   .focus-images-box{
     position: absolute;
     top: 58%;
-    left: 21%;
+    transform: translate(63%, 0%);
   }
 
   .focus-image-background{
@@ -112,6 +122,15 @@
     top: 127%;
     left: 38%;
     -webkit-text-stroke: 0.5px #1a1a1a;
+  }
+  
+  .reserve-button{
+    transition: 0.5s;
+    background: linear-gradient(#e9e9e8, #acacac);
+    display: inline-block;
+    position: absolute;
+    top: 166%;
+    left: 43%;
   }
   
   .pool{
@@ -437,19 +456,19 @@
   .policies-row{
     display: flex;
     justify-content: center;
-    padding-top: 16px;
-    margin-right: 19px;
-    margin-left: 18px;
-    padding-bottom: 19px;
+    padding-top: 3rem;
+    margin-right: 2rem;
+    margin-left: 2rem;
+    padding-bottom: 1rem;
   }
 
   .policies-col{
-    margin-right: 19px;
-    margin-left: 18px;
+    margin-right: 2rem;
+    margin-left: 2rem;
   }
 
   .policy-link{
-    font-size: 17px;
+    font-size: 1.5rem;
     color: white;
     margin-right: 3rem;
   }
@@ -461,9 +480,9 @@
   .brand-row{
     display: flex;
     justify-content: center;
-    padding-top: 19px;
-    margin-right: 29px;
-    padding-bottom: 35px;
+    padding-top: 2rem;
+    margin-right: 2rem;
+    padding-bottom: 1rem;
   }
 
   .logo-footer{
@@ -490,10 +509,12 @@
 
   .z1-text{
     font-size: 13px;
+    transform: translate(-10%,0%);
   }
 
   .z-text{
     font-size: 13px;
+    transform: translate(-10%,0%);
   }
 
   .social-media-image{
