--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -419,10 +419,9 @@
 										</select>
 										<input class="form-control feedback-form" id="phone-number" name="phone-number"
 											type="text" required>
-										<div class="invalid-feedback" id="phone-number-feedback">Please enter your phone
-											number.
-										</div>
 									</div>
+									<div class="invalid-feedback" id="phone-number-feedback">Please enter a valid phone
+										number.</div>
 									<div class="field btns">
 										<button class="btn first-prev prev-1 prev btn-outline-dark">Previous</button>
 										<button class="btn second-next next-1 next btn-outline-dark">Next</button>
@@ -469,7 +468,8 @@
 										card number.</div>
 									<div class="field btns">
 										<button class="btn third-prev prev-3 prev btn-outline-dark">Previous</button>
-										<button class="btn submit btn-outline-dark" id="submit-button" type="button">Submit</button>
+										<button class="btn submit btn-outline-dark" id="submit-button"
+											type="button">Submit</button>
 									</div>
 								</div>
 							</form>
