--- a/src/main/resources/static/css/views/reservation.css
+++ b/src/main/resources/static/css/views/reservation.css
@@ -184,6 +184,32 @@
     color: #1a1a1a;
   }
 
+  #reservationModalTwo{
+    transform: translate(-0.4%, 18%);
+  }
+
+  #reservationModalTwo .modal-body{
+    height: 7rem;
+  }
+
+  .alert-text{
+    margin-top: 20px;
+    margin-left: 100px;
+  }
+
+  #reservationModalThree{
+    transform: translate(-0.4%, 18%);
+  }
+
+  #reservationModalThree .modal-body{
+    height: 7rem;
+  }
+
+  .success-text{
+    margin-top: 20px;
+    margin-left: 100px;
+  }
+
   .book{
     background: linear-gradient(rgba(26, 26, 26, 0.85), rgba(26, 26, 26, 0.85));
     color: #fff;
