--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -479,10 +479,37 @@
 			</div>
 		</div>
 
+		<div class="modal draggable fade" id="reservationModalTwo" tabindex="-1" role="dialog"
+			aria-labelledby="reservationModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close alert-close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p class="alert-text">Please input the required information.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
-
-
-
+		<div class="modal draggable fade" id="reservationModalThree" tabindex="-1" role="dialog"
+			aria-labelledby="reservationModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close success-close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p class="success-text">Your booking has been successful.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 	</section>
 
