--- a/src/main/resources/static/css/views/reservation.css
+++ b/src/main/resources/static/css/views/reservation.css
@@ -16,6 +16,10 @@
   margin-left: 263px;
 }
 
+.second-set-btns{
+  margin-top: 35px;
+}
+
 .service-select{
   margin-bottom: 1rem;
 }
@@ -53,6 +57,17 @@
   display: grid;
   grid-template-columns: 4.7rem 23rem;
   grid-gap: 1rem;
+}
+
+.success-text {
+   margin-bottom: 0.5rem;
+   text-align: center;
+}
+
+#booking-id {
+    font-weight: bold;
+    font-size: x-large;
+    text-align: center;
 }
 
 .form-outer{
@@ -203,11 +218,6 @@
 
   #reservationModalThree .modal-body{
     height: 7rem;
-  }
-
-  .success-text{
-    margin-top: 20px;
-    margin-left: 100px;
   }
 
   .book{
