--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -41,7 +41,8 @@
 					</a></li>
 				<li class="nav-item active"><a class="nav-link" href="#contact-us">Contacts
 					</a></li>
-				<li class="nav-item active"><a class="nav-link" href="#">Login</a>
+				<li class="nav-item active"><a class="nav-link" href="#" data-toggle="modal"
+						data-target="#editReservationModal">Reservations</a>
 				</li>
 			</ul>
 
@@ -422,7 +423,7 @@
 									</div>
 									<div class="invalid-feedback" id="phone-number-feedback">Please enter a valid phone
 										number.</div>
-									<div class="field btns">
+									<div class="field btns second-set-btns">
 										<button class="btn first-prev prev-1 prev btn-outline-dark">Previous</button>
 										<button class="btn second-next next-1 next btn-outline-dark">Next</button>
 									</div>
@@ -499,13 +500,31 @@
 			aria-labelledby="reservationModalLabel" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
+					<div class="modal-header">Success!
+						<button type="button" class="close success-close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p class="success-text">See your booking ID below in case you need to double-check or
+							edit your reservation.</p>
+						<p class="booking-id" id="booking-id"></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal draggable fade" id="editReservationModal" tabindex="-1" role="dialog"
+			aria-labelledby="reservationModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close success-close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
 					</div>
 					<div class="modal-body">
-						<p class="success-text">Your booking has been successful.</p>
+
 					</div>
 				</div>
 			</div>
