--- a/src/main/resources/static/css/views/reservation.css
+++ b/src/main/resources/static/css/views/reservation.css
@@ -220,6 +220,25 @@
     height: 7rem;
   }
 
+  #editReservationModal .modal-body{
+    margin-top: 1rem;
+    height: 13rem;
+    font-weight: bold;
+  }
+
+  #reservation-number{
+    margin: 4px 0 16px 0;
+    padding: 12px 15px;
+    border-radius: 5px;
+    font-size: 17px;
+  }
+
+  #search-button{
+    width: 70%;
+    margin-top: 0.5rem;
+    transform: translate(23%, 0%);
+  }
+
   .book{
     background: linear-gradient(rgba(26, 26, 26, 0.85), rgba(26, 26, 26, 0.85));
     color: #fff;
