--- a/src/main/resources/static/css/views/index.css
+++ b/src/main/resources/static/css/views/index.css
@@ -1,581 +1,592 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  p{
-  	margin: 0;
-  	padding: 0;
-  }
-
-  .main{
-      background: rgba(36, 38, 41, 0.975);
-  }
-  
-  .landing {
-    min-height: 90vh;
-    background: url("../../images/hotel_lobby_three.jpg");
-    background-size: cover;
-    padding: 0rem;
-  }
-
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 73px;
-  }
-
-  .logo-navbar{
-    width: 38px;
-    height: 38px;
-    margin-right: 8px;
-  }
-
-  .nav-links {
-    display: flex;
-    list-style: none;
-  }
-
-  .nav-links li {
-    padding-left: 10rem;
-    font-size: 1.2rem;
-  }
-
-  #logo {
-    font-weight: lighter;
-    font-size: 2rem;
-  }
-
-  .big-text {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    color: white;
-    -webkit-text-stroke: 2px #1a1a1a;
-    transform: translate(-53%, -110%);
-    font-size: 5rem;
-  }
-
-  .big-text-two {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    color: white;
-    -webkit-text-stroke: 2px #1a1a1a;
-    transform: translate(-53%, -110%);
-    font-size: 5rem;
-  }
-
-  .navbar-brand{
-    margin-left: 9rem;
-  }
-  
-  .intro {
-    background: black;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .focus-images-box{
-    position: absolute;
-    top: 58%;
-    transform: translate(63%, -70%);
-  }
-
-  .focus-image-background{
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    width: 181px;
-    height: 181px;
-    transition: 0.5s;
-    background: linear-gradient(#e9e9e8, #acacac);
-    margin-right: 2rem;
-  }
-
-  .focus-image-background:hover{
-    transform: scale(1.1);
-    cursor: pointer;
-  }
-
-  .focus-image{
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    transform: scale(0.9);
-    width: 181px;
-    height: 181px;
-  }
-
-  .focus-title{
-    color: white;
-    opacity: 0;
-    border-bottom: 4px solid white;
-    transition: 0.5s;
-    display: inline-block;
-    position: absolute;
-    top: 127%;
-    left: 38%;
-    -webkit-text-stroke: 0.5px #1a1a1a;
-  }
-  
-  .reserve-button{
-    transition: 0.5s;
-    background: linear-gradient(#e9e9e8, #acacac);
-    display: inline-block;
-    position: absolute;
-    top: 166%;
-    left: 43%;
-  }
-  
-  .pool{
-  	background: #1a1a1a;
-    background-size: cover;
-    padding: 0rem;
-    margin: 0;
-  }
-  
-  .pool-heading{
-  	color: white;
-  }
-  
-  #pool-text{
-    color: white;
-    position: relative;
-    top: 7rem;
-    left: 7rem;
-  }
-  
-  .pool-image{
-    width: 73%;
-    height: 73%;
-    transform: translate(16%, 6%);
-  }
-
-  .pool-button{
-    color: white;
-    background: #1a1a1a;
-  }
-
-  .restaurant{
-    background-size: cover;
-    padding: 0rem;
-    margin: 0;
-  }
-
-  #restaurant-text{
-    top: 7rem;
-    text-align: right;
-    right: 7rem;
-  }
-
-  .restaurant-image{
-    width: 73%;
-    height: 73%;
-    transform: translate(15%, 17%);
-  }
-
-  .media{
-    background-color: #1a1a1a;
-    background-size: cover;
-    padding: 0rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-  }
-
-  .media-heading{
-    color: white;
-    transform: translate(0, 123%);
-  }
-
-  .swiper-container {
-    width: 100%;
-    padding-top: 5rem;
-    padding-bottom: 9rem;
-  }
-
-  .swiper-slide {
-    background-position: center;
-    background-color: white;
-    background-size: cover;
-    width: 610px;
-    height: 310px;
-    -webkit-box-reflect: below 1px linear-gradient(transparent, transparent, #1a1a1a);
-  }
-
-  .swiper-image{
-    width: 610px;
-    height: 310px;
-  }
-
-  .testimonials {
-    background-size: cover;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-  }
-
-  .testimonials-heading{
-    color: #1a1a1a;
-    transform: translate(0, 118%);
-  }
-
-  .testimonials-div{
-    position: relative;
-    padding-bottom: 2rem;
-    max-width: 100%;
-  }
-
-  .testimonials-slide {
-    background-position: center;
-    margin: 0 20px;
-    background-size: cover;
-    width: 350px;
-    min-height: 350px;
-    background: #1a1a1a;
-  }
-
-  .swiper-container-3d .swiper-slide-shadow-left,
-  .swiper-container-3d .swiper-slide-shadow-right{
-    background-image: none;
-  }
-
-  .testimonials-card{
-    position: relative;
-    width: 100%;
-    margin: 0 auto;
-    background: #1a1a1a;
-    padding: 60px 40px;
-    text-align: center;
-    overflow: hidden;
-  }
-
-  .testimonials-card .layer{
-    position: absolute;
-    top: calc(100% - 2px);
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(#e9e9e8, #acacac);
-    z-index: 1;
-  }
-
-  .testimonials-card:hover .layer{
-    top: 0;
-    transition: 0.5s;
-  }
-
-  .testimonials-card .content{
-    position: relative;
-    z-index: 2;
-  }
-
-  .testimonials-card .content p{
-    font-size: 18px;
-    line-height: 24px;
-    margin-bottom: 20px;
-    font-style: italic;
-    color: white;
-  }
-
-  .testimonials-card .content .imgBox{
-    width: 100px;
-    height: 100px;
-    margin: 0 auto 10px;
-    border-radius: 50%;
-    overflow: hidden;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  }
-
-  .testimonials-image{
-    width: 100%;
-    height: 100%;
-  }
-
-  .testimonials-card .content h2{
-    font-size: 18px;
-    color: white;
-  }
-
-  .testimonials-card .content h2 span{
-    color: #03a9f4;
-    font-size: 14px;
-    transition: 0.5s;
-  }
-
-  .testimonials-card:hover .content p{
-    color: black;
-  }
-
-  .testimonials-card:hover .content h2{
-    color: black;
-  }
-
-  .testimonials-card:hover .content h2 span{
-    color: black;
-  }
-
-  .about{
-    background: #1a1a1a;
-    background-size: cover;
-    padding: 0rem;
-    display: flex;
-    justify-content: center;
-    margin: 0;
-  }
-
-  .about-heading{
-    color: white;
-    margin-top: 52px;
-  }
-
-  .about-row{
-    display: grid;
-    grid-template-columns: 28rem 28rem 28rem;
-    grid-gap: 20px;
-    margin-top: 37px;
-    padding-bottom: 5rem;
-    bottom: 37px;
-  }
-
-  .flip-card {
-    background-color: transparent;
-    height: 509px;
-    text-align: justify;
-    color: white;
-    background-color: #1a1a1a;
-    bottom: 25px;
-  }
-  
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    color: white;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-card-front {
-    border-style: solid;
-    border-color: white;
-    color: white;
-  }
-  
-  .flip-card-back {
-    padding-top: 129px;
-    padding-right: 39px;
-    padding-bottom: 28px;
-    padding-left: 39px;
-    border-style: solid;
-    border-color: white;
-    color: white;
-    transform: rotateY(180deg);
-  }
-
-  .blockquote{
-    margin-right: 16px;
-    margin-left: 16px;
-  }
-
-  .logo-image{
-    width: 200px;
-    height: 250px;
-    margin-top: 71px;
-    margin-left: 109px;
-
-  }
-
-  .card-heading{
-    color: white;
-  }
-
-  #contacts-col{
-    position: relative;
-    top: 7rem;
-    left: 7rem;
-  }
-
-  .location-image{
-    width: 1rem;
-    height: 1rem;
-  }
-
-  .phone-image{
-    width: 1rem;
-    height: 1rem;
-  }
-
-  .email-image{
-    width: 1rem;
-    height: 1rem;
-  }
-
-  #feedback-col{
-    position: relative;
-    right: 3rem;
-  }
-
-  .invalid-feedback{
-    display: none;
-  }
-
-  html{
-    scroll-behavior: smooth;
-  }
-
-  .footer{
-    background: #1a1a1a;
-    color: white;
-    background-size: cover;
-    padding: 0rem;
-    margin: 0;
-  }
-
-  .policies-row{
-    display: flex;
-    justify-content: center;
-    padding-top: 3rem;
-    margin-right: 2rem;
-    margin-left: 2rem;
-    padding-bottom: 1rem;
-  }
-
-  .policies-col{
-    margin-right: 2rem;
-    margin-left: 2rem;
-  }
-
-  .policy-link{
-    font-size: 1.5rem;
-    color: white;
-    margin-right: 3rem;
-  }
-
-  .policy-link:hover{
-    color: white;
-  }
-
-  .brand-row{
-    display: flex;
-    justify-content: center;
-    padding-top: 2rem;
-    margin-right: 2rem;
-    padding-bottom: 1rem;
-  }
-
-  .logo-footer{
-    width: 29px;
-    height: 29px;
-  }
-
-  .brand-title{
-    font-size: 27px;
-    margin-left: 6px;
-    font-style: bold;
-  }
-
-  .z-row{
-    display: flex;
-    justify-content: center;
-  }
-
-  .z1-row{
-    display: flex;
-    justify-content: center;
-    padding-bottom: 17px;
-  }
-
-  .z1-text{
-    font-size: 13px;
-    transform: translate(-10%,0%);
-  }
-
-  .z-text{
-    font-size: 13px;
-    transform: translate(-10%,0%);
-  }
-
-  .social-media-image{
-    width: 2rem;
-    height: 2rem;
-  }
-
-  .social-media-row{
-    display: flex;
-    justify-content: center;
-    padding-top: 17px;
-    margin-bottom: 15px;
-    padding-right: 1.5rem;
-  }
-
-  .social-icons-row{
-    display: flex;
-    justify-content: center;
-    padding-bottom: 16px;
-  }
-
-  #facebook-image:hover{
-    content: url(../../images/facebook-square-color.svg);
-    transform: scale(1.2);
-    cursor: pointer;
-  }
-
-  #twitter-image:hover{
-    content: url(../../images/twitter-square-color.svg);
-    transform: scale(1.2);
-    cursor: pointer;
-  }
-
-  #instagram-image:hover{
-    content: url(../../images/instagram-square-color.svg);
-    transform: scale(1.2);
-    cursor: pointer;
-  }
-
-  #linkedin-image:hover{
-    content: url(../../images/linkedin-square-color.svg);
-    transform: scale(1.2);
-    cursor: pointer;
-  }
-
-  .slider {
-    background: black;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-  }
-
-  .hide {
-    background: black;
-    overflow: hidden;
-  }
-  
-  .hide span {
-    transform: translateY(100%);
-    display: inline-block;
-  }
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+p {
+	margin: 0;
+	padding: 0;
+}
+
+.main {
+	background: rgba(36, 38, 41, 0.975);
+}
+
+.landing {
+	min-height: 90vh;
+	background: url("../../images/hotel_lobby_three.jpg");
+	background-size: cover;
+	padding: 0rem;
+}
+
+nav {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	height: 73px;
+}
+
+.logo-navbar {
+	width: 38px;
+	height: 38px;
+	margin-right: 8px;
+}
+
+.nav-links {
+	display: flex;
+	list-style: none;
+}
+
+.nav-links li {
+	padding-left: 10rem;
+	font-size: 1.2rem;
+}
+
+#logo {
+	font-weight: lighter;
+	font-size: 2rem;
+}
+
+.big-text {
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	color: white;
+	-webkit-text-stroke: 2px #1a1a1a;
+	transform: translate(-53%, -110%);
+	font-size: 5rem;
+}
+
+.big-text-two {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	color: white;
+	-webkit-text-stroke: 2px #1a1a1a;
+	transform: translate(-53%, -110%);
+	font-size: 5rem;
+}
+
+.navbar-brand {
+	margin-left: 9rem;
+}
+
+.intro {
+	background: black;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.focus-images-box {
+	position: absolute;
+	top: 58%;
+	transform: translate(63%, -70%);
+}
+
+.focus-image-background {
+	clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+	width: 181px;
+	height: 181px;
+	transition: 0.5s;
+	background: linear-gradient(#e9e9e8, #acacac);
+	margin-right: 2rem;
+}
+
+.focus-image-background:hover {
+	transform: scale(1.1);
+	cursor: pointer;
+}
+
+.focus-image {
+	clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+	transform: scale(0.9);
+	width: 181px;
+	height: 181px;
+}
+
+.focus-title {
+	color: white;
+	opacity: 0;
+	border-bottom: 4px solid white;
+	transition: 0.5s;
+	display: inline-block;
+	position: absolute;
+	top: 127%;
+	left: 38%;
+	-webkit-text-stroke: 0.5px #1a1a1a;
+}
+
+.reserve-button {
+	transition: 0.5s;
+	background: linear-gradient(#e9e9e8, #acacac);
+	display: inline-block;
+	position: absolute;
+	top: 166%;
+	left: 43%;
+}
+
+.pool {
+	background: #1a1a1a;
+	background-size: cover;
+	padding: 0rem;
+	margin: 0;
+}
+
+.pool-heading {
+	color: white;
+}
+
+#pool-text {
+	color: white;
+	position: relative;
+	top: 7rem;
+	left: 7rem;
+}
+
+.pool-image {
+	width: 73%;
+	height: 73%;
+	transform: translate(16%, 6%);
+}
+
+.pool-button {
+	color: white;
+	background: #1a1a1a;
+}
+
+.restaurant {
+	background-size: cover;
+	padding: 0rem;
+	margin: 0;
+}
+
+#restaurant-text {
+	top: 7rem;
+	text-align: right;
+	right: 7rem;
+}
+
+.restaurant-image {
+	width: 73%;
+	height: 73%;
+	transform: translate(15%, 17%);
+}
+
+.media {
+	background-color: #1a1a1a;
+	background-size: cover;
+	padding: 0rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+}
+
+.media-heading {
+	color: white;
+	transform: translate(0, 123%);
+}
+
+.swiper-container {
+	width: 100%;
+	padding-top: 5rem;
+	padding-bottom: 9rem;
+}
+
+.swiper-slide {
+	background-position: center;
+	background-color: white;
+	background-size: cover;
+	width: 610px;
+	height: 310px;
+	-webkit-box-reflect: below 1px
+		linear-gradient(transparent, transparent, #1a1a1a);
+}
+
+.swiper-image {
+	width: 610px;
+	height: 310px;
+}
+
+.testimonials {
+	background-size: cover;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+}
+
+.testimonials-heading {
+	color: #1a1a1a;
+	transform: translate(0, 118%);
+}
+
+.testimonials-div {
+	position: relative;
+	padding-bottom: 2rem;
+	max-width: 100%;
+}
+
+.testimonials-slide {
+	background-position: center;
+	margin: 0 20px;
+	background-size: cover;
+	width: 350px;
+	min-height: 350px;
+	background: #1a1a1a;
+}
+
+.swiper-container-3d .swiper-slide-shadow-left, .swiper-container-3d .swiper-slide-shadow-right
+	{
+	background-image: none;
+}
+
+.testimonials-card {
+	position: relative;
+	width: 100%;
+	margin: 0 auto;
+	background: #1a1a1a;
+	padding: 60px 40px;
+	text-align: center;
+	overflow: hidden;
+}
+
+.testimonials-card .layer {
+	position: absolute;
+	top: calc(100% - 2px);
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(#e9e9e8, #acacac);
+	z-index: 1;
+}
+
+.testimonials-card:hover .layer {
+	top: 0;
+	transition: 0.5s;
+}
+
+.testimonials-card .content {
+	position: relative;
+	z-index: 2;
+}
+
+.testimonials-card .content p {
+	font-size: 18px;
+	line-height: 24px;
+	margin-bottom: 20px;
+	font-style: italic;
+	color: white;
+}
+
+.testimonials-card .content .imgBox {
+	width: 100px;
+	height: 100px;
+	margin: 0 auto 10px;
+	border-radius: 50%;
+	overflow: hidden;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.testimonials-image {
+	width: 100%;
+	height: 100%;
+}
+
+.testimonials-card .content h2 {
+	font-size: 18px;
+	color: white;
+}
+
+.testimonials-card .content h2 span {
+	color: #03a9f4;
+	font-size: 14px;
+	transition: 0.5s;
+}
+
+.testimonials-card:hover .content p {
+	color: black;
+}
+
+.testimonials-card:hover .content h2 {
+	color: black;
+}
+
+.testimonials-card:hover .content h2 span {
+	color: black;
+}
+
+.about {
+	background: #1a1a1a;
+	background-size: cover;
+	padding: 0rem;
+	display: flex;
+	justify-content: center;
+	margin: 0;
+}
+
+.about-heading {
+	color: white;
+	margin-top: 52px;
+}
+
+.about-row {
+	display: grid;
+	grid-template-columns: 28rem 28rem 28rem;
+	grid-gap: 20px;
+	margin-top: 37px;
+	padding-bottom: 5rem;
+	bottom: 37px;
+}
+
+.flip-card {
+	background-color: transparent;
+	height: 509px;
+	text-align: justify;
+	color: white;
+	background-color: #1a1a1a;
+	bottom: 25px;
+}
+
+.flip-card-inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transition: transform 0.8s;
+	transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+	transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	color: white;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.flip-card-front {
+	border-style: solid;
+	border-color: white;
+	color: white;
+}
+
+.flip-card-back {
+	padding-top: 129px;
+	padding-right: 39px;
+	padding-bottom: 28px;
+	padding-left: 39px;
+	border-style: solid;
+	border-color: white;
+	color: white;
+	transform: rotateY(180deg);
+}
+
+.blockquote {
+	margin-right: 16px;
+	margin-left: 16px;
+}
+
+.logo-image {
+	width: 200px;
+	height: 250px;
+	margin-top: 71px;
+	margin-left: 109px;
+}
+
+.card-heading {
+	color: white;
+}
+
+#contacts-col {
+	position: relative;
+	top: 7rem;
+	left: 7rem;
+}
+
+.location-image {
+	width: 1rem;
+	height: 1rem;
+}
+
+.phone-image {
+	width: 1rem;
+	height: 1rem;
+}
+
+.email-image {
+	width: 1rem;
+	height: 1rem;
+}
+
+#feedback-col {
+	position: relative;
+	right: 3rem;
+}
+
+.invalid-feedback {
+	display: none;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+.footer {
+	background: #1a1a1a;
+	color: white;
+	background-size: cover;
+	padding: 0rem;
+	margin: 0;
+}
+
+.policies-row {
+	display: flex;
+	justify-content: center;
+	padding-top: 3rem;
+	margin-right: 2rem;
+	margin-left: 2rem;
+	padding-bottom: 1rem;
+}
+
+.policies-col {
+	margin-right: 2rem;
+	margin-left: 2rem;
+}
+
+.policy-link {
+	font-size: 1.5rem;
+	color: white;
+	margin-right: 3rem;
+}
+
+.policy-link:hover {
+	color: white;
+}
+
+.brand-row {
+	display: flex;
+	justify-content: center;
+	padding-top: 2rem;
+	margin-right: 2rem;
+	padding-bottom: 1rem;
+}
+
+.logo-footer {
+	width: 29px;
+	height: 29px;
+}
+
+.brand-title {
+	font-size: 27px;
+	margin-left: 6px;
+	font-style: bold;
+}
+
+.z-row {
+	display: flex;
+	justify-content: center;
+}
+
+.z1-row {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 17px;
+}
+
+.z1-text {
+	font-size: 13px;
+	transform: translate(-10%, 0%);
+}
+
+.z-text {
+	font-size: 13px;
+	transform: translate(-10%, 0%);
+}
+
+.social-media-image {
+	width: 2rem;
+	height: 2rem;
+}
+
+.social-media-row {
+	display: flex;
+	justify-content: center;
+	padding-top: 17px;
+	margin-bottom: 15px;
+	padding-right: 1.5rem;
+}
+
+.social-icons-row {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 16px;
+}
+
+#facebook-image:hover {
+	content: url(../../images/facebook-square-color.svg);
+	transform: scale(1.2);
+	cursor: pointer;
+}
+
+#twitter-image:hover {
+	content: url(../../images/twitter-square-color.svg);
+	transform: scale(1.2);
+	cursor: pointer;
+}
+
+#instagram-image:hover {
+	content: url(../../images/instagram-square-color.svg);
+	transform: scale(1.2);
+	cursor: pointer;
+}
+
+#linkedin-image:hover {
+	content: url(../../images/linkedin-square-color.svg);
+	transform: scale(1.2);
+	cursor: pointer;
+}
+
+#successful-feedback-modal .modal-body {
+	margin-top: 1rem;
+	height: 13rem;
+	font-weight: bold;
+}
+
+.thank-you-message {
+	margin-top: 20px;
+	margin-left: 100px;
+}
+
+.slider {
+	background: black;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform: translateY(100%);
+}
+
+.hide {
+	background: black;
+	overflow: hidden;
+}
+
+.hide span {
+	transform: translateY(100%);
+	display: inline-block;
+}
